--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^20.14.11",
+    "prisma": "^5.17.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.17.0",
+    "fastify": "^4.28.1"
   }
 }
